syntax = "proto3";

                 package tbClreDedMg;
service TbClreDedMgService {
 rpc createTbClreDedMg (TbClreDedMgCreateInput) returns (TbClreDedMg) {}
rpc tbClreDedMgs (findManyParams) returns (stream TbClreDedMg) {}
rpc tbClreDedMg (TbClreDedMgWhereUniqueInput) returns (TbClreDedMg) {}
rpc updateTbClreDedMg (TbClreDedMgUpdateInput) returns (TbClreDedMg) {}
rpc deleteTbClreDedMg (TbClreDedMgWhereUniqueInput) returns (TbClreDedMg) {} 
 }
message TbClreDedMgCreateInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
string mgAcNo = 9;
string mgTpCd = 10;
string reffNo = 11;
string updatedAt = 12;
};
message TbClreDedMg {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
string mgAcNo = 9;
string mgTpCd = 10;
string reffNo = 11;
string updatedAt = 12;
};
message TbClreDedMgWhereUniqueInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
string mgAcNo = 9;
string mgTpCd = 10;
string reffNo = 11;
string updatedAt = 12;
};
message TbClreDedMgUpdateInput {
string createdAt = 1;
string delYn = 2;
string frstRegstId = 3;
string frstRgsrDttm = 4;
string id = 5;
string lastChgDttm = 6;
string lastChprId = 7;
int32 mdfyDgcnt = 8;
string mgAcNo = 9;
string mgTpCd = 10;
string reffNo = 11;
string updatedAt = 12;
};
message findManyParams {

};